<resources>
    <string name="about_praise">给我评价</string>
    <string name="about_announcer">诚招主持人</string>
    <string name="about_announcer_alert">听歌学英语节目主持人正在火爆招聘中，如果您的英语发音标准，声音亲和甜美，下一首听歌学英语主持人也许就是你。\n请将个人简历和作品发送至: hr@iyuba.cn</string>
    <string name="about_update">版本更新</string>
    <string name="about_communicate">如有问题，可与商务热线 4008881905或官方邮箱admin@iyuba.cn联系</string>
    <string name="about_title">关于</string>
    <string name="about_update_alert_1">当前有新版本更新：</string>
    <string name="about_update_alert_2">,是否要更新？</string>
    <string name="about_market_error">您当前未安装应用市场，无法使用该功能。</string>
    <string name="setting_title">设置</string>
    <string name="setting_language">语言设置</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_applanguage">界面语言</string>
    <string name="setting_base">功能设置</string>
    <string name="setting_base_download">高速下载-VIP用户10倍于普通用户</string>
    <string name="setting_base_push">允许应用给您推送消息</string>
    <string name="setting_sleep">提示：点击窗口外部关闭窗口！</string>
    <string name="setting_clear_pic">清理图片缓存</string>
    <string name="setting_clear_video">清理音频缓存</string>
    <string name="setting_about">关于</string>
    <string name="setting_recommend">推荐给朋友们</string>
    <string name="setting_about_info">关于爱语吧</string>
    <string name="setting_save_path_info">设置文件保存路径</string>
    <string name="setting_about_feedback">意见反馈</string>
    <string name="setting_help_use">使用帮助</string>
    <string name="setting_loginout_success">退出成功！</string>
    <string name="setting_sleep_mod">睡眠模式</string>
    <string name="setting_sleep_state_off">关</string>
    <string name="setting_sleep_slecttime">请选择时间</string>
    <string name="setting_sleep_explain">例如设置"01:23"则代表1个小时23分钟之后关闭程序。</string>
    <string name="setting_deleting">后台自动删除中……</string>
    <string name="setting_alert">一旦删除，已收藏的本地音频无法再离线收听。\n确定要继续么?</string>
    <string name="setting_logout_alert">登录状态可以享受更多爱语吧服务\n您确定要退出吗？</string>
    <string name="setting_share1">我正在使用</string>
    <string name="setting_share2">android版，感觉不错，你也来试试吧</string>
    <string name="setting_share_ways">选择分享方式</string>
    <string name="setting_vip_download">您可以在登录爱语吧账号后，购买VIP，享受高速通道30倍速率下载。下载速度最高可达1M/s。</string>
    <string name="choose_pay_method">选择支付方式</string>
    <string name="pay_confirm">确认</string>
    <string name="minName">SurfingNearby</string>
    <string name="minVer">2.0</string>
    <string name="runEnv_name">Android</string>
    <string name="ssite_code">10</string>
    <string name="dialog_title_normal">爱语吧提示</string>
    <string name="error_net_unavailable">网络错误，无法和服务器取得联系\n按\"退出\"直接退出酣逗畅游，稍后请重试</string>
    <string name="error_net_wifi_other">网络错误，无法和服务器取得联系\n按\"重设网络\"尝试选择其他Wifi接入点，稍后请重试\n按\"退出\"直接退出酣逗畅游，稍后请重试</string>
    <string name="error_net_wifi">网络错误，无法和服务器取得联系\n按\"重设网络\"尝试使用Wifi接入点，稍后请重试\n按\"退出\"直接退出酣逗畅游，稍后请重试</string>
    <string name="error_net_wifi_off">网络错误，无法和服务器取得联系\n按\"重设网络\"选择其他Wifi接入点，稍后请重试\n按\"关闭Wifi\"关闭Wifi尝试使用3G/GPRS\n按\"退出\"直接退出酣逗畅游，稍后请重试</string>
    <string name="dialog_button_exit">退出软件</string>
    <string name="dialog_button_resetNet">重设网络</string>
    <string name="dialog_button_offWifi">关闭Wifi</string>
    <string name="no_login">您还未登录！请登录！</string>
    <string name="check_network">网络异常或服务器忙，请稍后重试</string>
    <string name="check_gps">请打开GPS获取位置信息！</string>
    <string name="action_fail">操作失败，请重试！</string>
    <string name="send">发送</string>
    <string name="delete">删除</string>
    <string name="complete">完成</string>
    <string name="pic">图片</string>
    <string name="never_update">从未更新过</string>
    <string name="exit">退出登录</string>
    <string name="logout">退出登录</string>
    <string name="regist">注册</string>
    <string name="no_account_hint">临时用户不可以修改信息,请注册正式用户</string>
    <string name="no_account_hint2">请注册正式用户后再进行操作</string>
    <string name="discover_text">新闻</string>
    <string name="buy_buy">升级VIP</string>
    <string name="buy_success">支付成功，更新数据中……</string>
    <string name="login_title">用户登录</string>
    <string name="login_auto_login">自动登录</string>
    <string name="login_check_effective_user_id">请填写有效的用户ID</string>
    <string name="login_check_user_pwd_null">用户密码不能为空</string>
    <string name="login_check_user_pwd_constraint">密码为6~20个字符</string>
    <string name="login_faild">登录失败！请检查网络是否可用！</string>
    <string name="login_fail">登录失败,请检查用户名和密码</string>
    <string name="login_find_password">忘记密码？</string>
    <string name="login_regist">注册</string>
    <string name="login_login">登录</string>
    <string name="login_unamehint">请输入用户名</string>
    <string name="login_pwdhint">请输入密码</string>
    <string name="doing_title">评论</string>
    <string name="me_title">我</string>
    <string name="me_state_text">个性签名</string>
    <string name="me_attention_text">关注</string>
    <string name="me_fans_text">粉丝</string>
    <string name="me_notification_text">通知</string>
    <string name="me_message_text">消息中心</string>
    <string name="me_vip_text">会员中心</string>
    <string name="me_over_fix">字数超过限制</string>
    <string name="me_state_success">心情修改成功</string>
    <string name="me_state_fail">心情修改失败。请重新发送</string>
    <string name="me_view"> 人看过我的主页</string>
    <string name="me_study_time">学习时长:</string>
    <string name="me_hour">小时</string>
    <string name="me_minute">分钟</string>
    <string name="me_minus">秒</string>
    <string name="me_study_position">全站排名:</string>
    <string name="me_lv">等级:</string>
    <string name="message_title">私信</string>
    <string name="write_message">写私信</string>
    <string name="message_add_all">私信加载完毕</string>
    <string name="message_content_add_all">全部内容加载完毕</string>
    <string name="search_word_hint">请输入查询内容</string>
    <string name="word_title">单词</string>
    <string name="search_word_do">搜索</string>
    <string name="word_mean">解释:</string>
    <string name="word_example">例句:</string>
    <string name="word_null">请填写待查单词后再点击查询:</string>
    <string name="no_word_example">尚无例句。正在紧张整理中…</string>
    <string name="social_default_state">这个人很懒，什么也没有留下</string>
    <string name="social_add_all">数据已经加载完毕</string>
    <string name="social_distance">米</string>
    <string name="social_sameapp">共同应用:</string>
    <string name="social_cancle_attention">取消关注</string>
    <string name="social_success_attention">关注成功</string>
    <string name="social_failed_attention">关注失败</string>
    <string name="social_success_cancle_attention">取消关注成功</string>
    <string name="social_failed_cancle_attention">取消关注失败</string>
    <string name="social_attentioned">您已关注TA啦</string>
    <string name="social_friends">好友</string>
    <string name="social_search">搜索</string>
    <string name="social_search_in_friends">在好友中搜索</string>
    <string name="social_search_no_result">未找到相关结果</string>
    <string name="social_search_try_again">试试别的关键字吧！</string>
    <string name="social_load_more">加载更多</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_on_refreshing">加载中...</string>
    <string name="pull_to_refresh_lastest">最新更新:</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_release_label">释放加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中...</string>
    <string name="alert_title">提示</string>
    <string name="alert_recharge_content">您的爱语币余额不足支付，是否充值？</string>
    <string name="alert_all_life_vip">您已经是终身VIP</string>
    <string name="alert_net_content">网络未连接</string>
    <string name="alert_delete">确定删除该条记录?</string>
    <string name="alert_btn_cancel">取消</string>
    <string name="alert_btn_ok">确认</string>
    <string name="alert_btn_recharge">充值</string>
    <string name="alert_btn_buy">购买</string>
    <string name="alert_home">再按一次返回桌面</string>
    <string name="alert_press">再按一次退出程序</string>
    <string name="mainmenu_createdir">新建文件夹</string>
    <string name="file_rename">重命名</string>
    <string name="file_info">详情</string>
    <string name="file_cannotopen">无法打开: %1$s</string>
    <string name="file_exists">文件已存在！</string>
    <string name="file_namecannotempty">文件名不能为空</string>
    <string name="file_create_fail">创建文件失败！</string>
    <string name="file_rename_fail">重命名失败！</string>
    <string name="file_name">文件名</string>
    <string name="file_size">大小</string>
    <string name="file_contents">内容</string>
    <string name="file_lastmodified">最后修改时间</string>
    <string name="file_paste">粘贴</string>
    <string name="file_create">新建</string>
    <string name="file_notexists">文件不存在！</string>
    <string name="person_detail_title">个人详细资料</string>
    <string name="person_detail_base">基本信息</string>
    <string name="person_detail_nickname">昵称</string>
    <string name="person_detail_edu">教育信息</string>
    <string name="person_detail_college">大学</string>
    <string name="person_detail_corp">公司</string>
    <string name="person_detail_other">其他</string>
    <string name="person_detail_feeling">情感状态</string>
    <string name="person_detail_friend_aim">交友目的</string>
    <string name="person_detail_intro">自我介绍</string>
    <string name="person_detail_interest">兴趣爱好</string>
    <string name="person_info_title">编辑个人资料</string>
    <string name="person_info_gender">性别</string>
    <string name="person_info_birth">出生日期</string>
    <string name="person_info_success">修改成功</string>
    <string name="person_info_fail">修改失败，请重试</string>
    <string name="person_info_save">保存</string>
    <string name="person_info_uploadPic">上传头像</string>
    <string name="person_info_local_now">所在地</string>
    <string name="person_info_school">大学</string>
    <string name="person_info_zodiac">生肖</string>
    <string name="person_info_constellation">星座</string>
    <string name="answer">答案</string>
    <string name="explain">解析</string>
    <string name="number">题号</string>
    <string name="secret">暂时保密</string>
    <string name="no_answer">未做</string>
    <string name="your_answer">您的答案</string>
    <string name="right_answer">正确答案</string>
    <string name="keys">关键点:</string>
    <string name="explains">解释:</string>
    <string name="knowledges">知识点:</string>
    <string name="saying_next">换一个</string>
    <string name="saying_auto">自动</string>
    <string name="saying_manul">手动</string>
    <string name="newword_please_select_word">请选择要删除的生词</string>
    <string name="no_new_word">尚未添加生词，无法删除</string>
    <string name="word_add_all">云生词本加载完毕</string>
    <string name="word_no_data">生词本中还没有单词,快去添加一条吧</string>
    <string name="home_title">个人主页</string>
    <string name="person_vip_limit">VIP有效期已过</string>
    <string name="person_common_user">普通用户</string>
    <string name="person_not_vip">您还不是VIP</string>
    <string name="person_detail">详细信息</string>
    <string name="person_message">发私信</string>
    <string name="person_attention">加关注</string>
    <string name="person_attention_already">已关注</string>
    <string name="person_attention_mutually">互相关注</string>
    <string name="person_fix">修改信息</string>
    <string name="person_fans_count">粉丝 </string>
    <string name="person_attention_count">关注 </string>
    <string name="uploadimage">上传头像</string>
    <string name="uploadimage_default">头像示例</string>
    <string name="uploadimage_text">上传一张靓照吧，展现个性，积分+20</string>
    <string name="uploadimage_bycamera">相机拍摄</string>
    <string name="uploadimage_bylocal">选择本地图片</string>
    <string name="uploadimage_skip">跳过</string>
    <string name="ques_disc">添加问题</string>
    <string name="ques_app_type">选择问题应用来源</string>
    <string name="ques_ability_type">选择问题考点类型</string>
    <string name="ques_cancel">取消</string>
    <string name="ques_pre">上一步</string>
    <string name="ques_complete">完成</string>
    <string name="ques_next">下一步</string>
    <string name="photo">拍照</string>
    <string name="ques_words_tip">剩余输入字数140</string>
    <string name="ques_tip">您可以添加图片或文字来提问</string>
</resources>