<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/part1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/title_part"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@color/title_bar_text"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/ques_cancel"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ques_disc"
                android:textColor="@color/title_bar_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/next_to_app_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/ques_next"
                android:textColor="@color/title_bar_text"
                android:textSize="18sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/photo_pic"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:background="@drawable/photo_pic" />

        <RelativeLayout
            android:id="@+id/center_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/photo_pic"
            android:background="#e1e1e1"
            android:padding="8dp">

            <TextView
                android:id="@+id/photo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/photo"
                android:textColor="#535353" />

            <ImageView
                android:layout_width="33dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/photo_text"
                android:src="@drawable/photo_icon" />

            <TextView
                android:id="@+id/ques_words_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/ques_words_tip"
                android:textColor="#535353" />
        </RelativeLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/title_part"
            android:background="@color/divider_line" />

        <EditText
            android:id="@+id/ques_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/center_part"
            android:layout_below="@id/line"
            android:gravity="top"
            android:hint="@string/ques_tip"
            android:textColor="#535353"
            android:textSize="16sp" />

        <com.iyuba.core.widget.ContextMenu
            android:id="@+id/context_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/part2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/titlebar_lightgray_bg">

            <TextView
                android:id="@+id/part2btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/ques_pre"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ques_app_type"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/part2btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/ques_next"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </RelativeLayout>

        <ListView
            android:id="@+id/part2_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"></ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/part3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/titlebar_lightgray_bg">

            <TextView
                android:id="@+id/part3btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/ques_pre"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ques_ability_type"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/part3btn_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/ques_complete"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </RelativeLayout>

        <ListView
            android:id="@+id/part3_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"></ListView>
    </LinearLayout>

</LinearLayout>