<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:background="?attr/colorPrimary">

        <Button
            android:id="@+id/upload_back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/lib_back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/uploadimage"
            android:textColor="#fff"
            android:textSize="19sp" />
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/title"
        android:background="@color/divider_line" />

    <LinearLayout
        android:id="@+id/image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_marginTop="10dip"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_marginBottom="5dip"
                tools:background="@drawable/userimg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploadimage_default"
                android:textColor="#a7a8a8" />
        </LinearLayout>

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:text="@string/uploadimage_text"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/upLoad"
            android:layout_width="80dip"
            android:layout_height="35dip"
            android:layout_marginBottom="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/button_background"
            android:text="上传"
            android:textColor="@color/base_white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/blueimage"
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:layout_below="@+id/image"
        android:layout_margin="5dip"
        android:background="@color/app_color"
        android:gravity="center"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/blueimage"
        android:layout_margin="5dip"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/photo"
            android:layout_width="240dip"
            android:layout_height="43dip"
            android:layout_marginBottom="15dip"
            android:background="@drawable/button_background"
            android:text="@string/uploadimage_bycamera"
            android:textColor="@color/base_white" />

        <Button
            android:id="@+id/local"
            android:layout_width="240dip"
            android:layout_height="43dip"
            android:layout_marginBottom="15dip"
            android:background="@drawable/button_background"
            android:text="@string/uploadimage_bylocal"
            android:textColor="@color/base_white" />

        <Button
            android:id="@+id/skip"
            android:layout_width="240dip"
            android:layout_height="43dip"
            android:background="@drawable/button_background"
            android:text="@string/uploadimage_skip"
            android:textColor="@color/base_white" />
    </LinearLayout>

</RelativeLayout>